refactor: clean up imports and improve code readability across multiple files